# Project-Telepath

./: .gitignore  DATA_INSTRUCTIONS.md  ImageBind-g.py  Image_Bind.py  README.md  job.sh  main.py  pyproject.toml  requirements.txt  setup.cfg
configs/: base_configs.py  experiment_configs
data/: DATA_INSTRUCTIONS.md  __init__.py  data_preprocessors.py  loaders.py
data/feature_extraction/: image_bind.py
data/feature_extraction/s01e01a/: friends_s01e01a.tsv
data/src/telepath/fmriTransformer/: data_load_align.py  model.py
data/src/telepath/language/: __init__.py  config.py
data/src/telepath/video/: config.py
experiments/: __init__.py  experiment_runner.py  hyperparameter_search.py
models/: base_classifier.py
models/classical/: __init__.py  random_forest.py
models/ensemble/: __init__.py  voting.py
models/neural/: attention.py  attention_ii.py  cnn.py  lstm.py  mlp.py
scripts/: run_feature_extraction_pipeline.py  run_train.py
scripts/strass-branch/: READMEstrass-branch.md  base_classifier.ipynb  classifier_factory.ipynb  efficientnet.ipynb  example_usage.ipynb  multimodal_classifier.ipynb  resnet.ipynb  vision_transformer.ipynb
scripts/v2-strass-branch/: README-v2-strass-branch.md  __init__.ipynb  __init__.py  base_classifier.ipynb  experiment_runner.ipynb  loaders.ipynb  main.ipynb  mlp.ipynb  svm.ipynb
scripts/v2-strass-branch/models/classical/: logistic_regression.py  svm.py
scripts/v2-strass-branch/models/ensemble/: stacking.py
scripts/v2-strass-branch/models/neural/: __init__.py  transformers.py
scripts/v2-strass-branch/tests/: data_loading.py
scripts/v2-strass-branch/utils/: metrics.py
src/feature_extraction/: extraction.py  test.py
src/multimodal_stimulus_fmri_prediction/audio/: extract.py
src/multimodal_stimulus_fmri_prediction/video/: __init__.py  transform_utils.py
src/telepath/audio/: __init__.py  config.py  extract.py
src/telepath/fmriTransformer/: data_load_align.py  model.py  train.py
src/telepath/language/: extract.py
src/telepath/video/: extract.py
src/your_package_name/audio/: __init__.py  extract.py
tests/: conftest.py  fix_imports.ps1  test_config_validation.py  test_extracted_feature.py  test_factory.py  test_imports.py
utils/: __init__.py  io_utils.py  visualization.py  viz_tables.py
