[metadata]
name = multimodal-stimulus-fmri-prediction
version = 0.1.0
description = Multimodal fMRI feature extraction and prediction
author = Your Name

[options]
package_dir =
    = src
packages = find:
install_requires =
    torch>=2.0
    torchvision>=0.15
    moviepy
    librosa
    numpy
    h5py
    tqdm
    pytorchvideo==0.1.5
    scikit-learn

[options.packages.find]
where = src
